tests/snapshots/pip__dry_run.snap
---
source: tests/pip.rs
info:
  program: migrate-to-uv
  args:
    - tests/fixtures/pip/full
    - "--dev-requirements-file"
    - requirements-dev.txt
    - "--dev-requirements-file"
    - requirements-typing.txt
    - "--dry-run"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
Migrated pyproject.toml:
[project]
name = ""
version = "0.0.1"
dependencies = [
    "anyio==4.7.0",
    "arrow==1.3.0",
    "certifi==2024.12.14",
    "click==8.1.8",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "rich==13.9.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "types-python-dateutil==2.9.0.20241206",
    "uvicorn @ git+https://github.com/encode/uvicorn",
    "zstandard==0.23.0",
]

[dependency-groups]
dev = [
    "iniconfig==2.0.0",
    "packaging==24.2",
    "pluggy==1.5.0",
    "pytest==8.3.4",
    "ruff==0.8.4",
    "attrs==24.3.0",
    "mypy==1.14.1",
    "mypy-extensions==1.0.0",
    "referencing==0.35.1",
    "rpds-py==0.22.3",
    "types-jsonschema==4.23.0.20241208",
    "typing-extensions==4.12.2",
]

[tool.uv]
package = false
